--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chromatype-studio",
   "private": true,
+  "homepage": "https://mamdouhmhed-235.github.io/chromatype-studio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
